--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,12 @@ name: iOS CI
 on:
   push:
     branches:
-      - [main, develop]
+      - main
+      - develop
   pull_request:
     branches:
-      - [main, develop]
+      - main
+      - develop
 
 jobs:
   build-and-test:
@@ -22,30 +24,23 @@ jobs:
       - name: Set up Xcode
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '15.5'
+          xcode-version: '15.4'
 
-      # 3. Кеш (опционально)
+      # 3. Кешируем DerivedData для ускорения последующих сборок
       - name: Cache DerivedData
         uses: actions/cache@v4
         with:
           path: ~/Library/Developer/Xcode/DerivedData
-          key: derived-data-${{ runner.os }}-${{ hashFiles('**/*.xcodeproj/**', '**/*.xcworkspace/**', '**/Podfile.lock') }}
+          key: derived-data-${{ runner.os }}-${{ hashFiles('Cinemark.xcodeproj/project.pbxproj', 'Cinemark.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/Package.resolved') }}
+          restore-keys: |
+            derived-data-${{ runner.os }}-
 
-      # 4. Сборка проекта
-      - name: Build
+      # 4. Собираем проект и запускаем тесты
+      - name: Build and Run Tests
         run: |
-          xcodebuild clean build \
-            -workspace Cinemark.xcodeproj \
+          xcodebuild clean build test \
+            -project Cinemark.xcodeproj \
             -scheme Cinemark \
-            -destination 'platform=iOS Simulator,name=iPhone 15,OS=18.0' \
-            CODE_SIGNING_ALLOWED=NO
-
-      # 5. Запуск тестов
-      - name: Run Tests
-        run: |
-          xcodebuild test \
-            -workspace Cinemark.xcodeproj \
-            -scheme Cinemark \
-            -destination 'platform=iOS Simulator,name=iPhone 15,OS=18.0' \
+            -destination 'platform=iOS Simulator,name=iPhone 15,OS=17.5' \
             CODE_SIGNING_ALLOWED=NO
 
