feat: add GitHub Actions CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
 
       # 2. Выбор версии Xcode
       # Явно указываем версию Xcode для обеспечения консистентности сборок.
-      # Вы можете изменить '15.4' на версию, которая вам нужна.
+      # Вы можете изменить '''15.4''' на версию, которая вам нужна.
       - name: Select Xcode version
         uses: actions/setup-xcode@v1
         with:
@@ -36,7 +36,7 @@ jobs:
       # 4. Сборка и тестирование
       # Этот шаг выполняет основную работу:
       # - Динамически находит доступный симулятор iPhone, чтобы избежать ошибок, связанных с отсутствием конкретной версии.
-      # - Запускает 'xcodebuild' с командами clean, build и test.
+      # - Запускает '''xcodebuild''' с командами clean, build и test.
       # - Использует xcpretty для более чистого и читаемого вывода.
       - name: Build and Test
         run: |
