--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,11 +20,9 @@ jobs:
 
       # 2. Выбор версии Xcode
       # Явно указываем версию Xcode для обеспечения консистентности сборок.
-      # Вы можете изменить '''15.4''' на версию, которая вам нужна.
+      # Используем прямую команду вместо deprecated action.
       - name: Select Xcode version
-        uses: actions/setup-xcode@v1
-        with:
-          xcode-version: '15.4'
+        run: sudo xcode-select -s /Applications/Xcode_15.4.app/Contents/Developer
 
       # 3. Установка зависимостей
       # Устанавливаем SwiftLint для проверки стиля кода и xcpretty для форматирования вывода xcodebuild.
@@ -33,13 +31,23 @@ jobs:
           brew install swiftlint
           sudo gem install xcpretty
 
-      - name: Repair project file
-        run: sed -i '' '/minimizedProjectReferenceProxies/d' Cinemark.xcodeproj/project.pbxproj
+      # 4. Проверка проекта и резолв пакетов
+      # Проверяем целостность проекта и резолвим Swift Package Manager зависимости
+      - name: Resolve Package Dependencies
+        run: |
+          echo "Checking Xcode version..."
+          xcodebuild -version
+          echo "Verifying project structure..."
+          ls -la Cinemark.xcodeproj/
+          echo "Listing project info..."
+          xcodebuild -project Cinemark.xcodeproj -list
+          echo "Resolving package dependencies..."
+          xcodebuild -project Cinemark.xcodeproj -resolvePackageDependencies
 
-      # 4. Сборка и тестирование
+      # 5. Сборка и тестирование
       # Этот шаг выполняет основную работу:
       # - Динамически находит доступный симулятор iPhone, чтобы избежать ошибок, связанных с отсутствием конкретной версии.
-      # - Запускает '''xcodebuild''' с командами clean, build и test.
+      # - Запускает 'xcodebuild' с командами clean, build и test.
       # - Использует xcpretty для более чистого и читаемого вывода.
       - name: Build and Test
         run: |
